--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_DatosCliente.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Pedidos/_DatosCliente.cshtml
@@ -4,7 +4,7 @@
 {
     settings.Name = "IdCliente";
     settings.Width = 180;
-    settings.ControlStyle.CssClass = "form-control show-tick table";
+    //settings.ControlStyle.CssClass = "form-control show-tick table";
     settings.SelectedIndex = 0;
     settings.Properties.DropDownWidth = 550;
     settings.Properties.DropDownStyle = DropDownStyle.DropDownList;
