JOTM-28/12/2018-Cambios de la primer prueba de campo
* Cambios recientes de la primer prueba de campo

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_captura_porcentaje.xml
@@ -94,6 +94,16 @@
 
     </LinearLayout>
 
+
+    <TextView
+        android:id="@+id/TVCapturaPorcentajeActivityTotalGas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="24sp" />
+
+
+
     <Button
         android:id="@+id/aceptar_button"
         style="@style/SagasTheme.Button"
