--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_captura_porcentaje.xml
@@ -97,6 +97,13 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/TVCapturaPorcentajeActivityTotalGas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
     <Button
         android:id="@+id/aceptar_button"
         style="@style/SagasTheme.Button"
