--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/Index.cshtml
@@ -65,14 +65,14 @@
                             <div class="row clearfix">
                                 <div class="col-sm-12">
                                     <div class="row clearfix">
-                                        <div class="col-sm-3">
+                                        <div class="col-sm-2">
                                             <b>No Cliente:</b>
                                             @Html.TextBoxFor(m => m[0].IdCliente, new { @class = "form-control"})
                                         </div>
-                                        <div class="col-sm-2">
+                                        <div class="col-sm-2" style="top:20px">
                                            @Html.DevExpress().DateEdit(settings =>
                                                        {
-                                                           settings.Name = "FechaRegistro";
+                                                           settings.Name = "FechaRango1";
                                                            settings.Properties.UseMaskBehavior = true;
                                                            settings.Properties.EditFormat = EditFormat.Custom;
                                                            settings.Theme = "Moderno";
@@ -83,10 +83,10 @@
                                                            settings.Properties.CalendarProperties.FastNavProperties.DisplayMode = FastNavigationDisplayMode.Inline;
                                                        }).GetHtml()
                                         </div>
-                                        <div class="col-sm-2">
+                                        <div class="col-sm-2" style="top:20px">
                                             @Html.DevExpress().DateEdit(settings =>
                                                        {
-                                                           settings.Name = "FechaRegistro";
+                                                           settings.Name = "FechaRango2";
                                                            settings.Properties.UseMaskBehavior = true;
                                                            settings.Properties.EditFormat = EditFormat.Custom;
                                                            settings.Theme = "Moderno";
@@ -101,7 +101,7 @@
                                             <b>RFC:</b>
                                             @Html.TextBoxFor(m => m[0].Rfc, new { @class = "form-control", placeholder = "RFC del cliente" })
                                         </div>
-                                        <div class="col-sm-3">
+                                        <div class="col-sm-3" style="top:10px">
                                             <div class="form-group">
                                                 <input type="submit" name="Buscar" value="Buscar" class="btn btn-raised btn-primary btn-round float-left" />
                                             </div>
